package pb;

message AttrRequest {
        required string name = 1;
}

message AttrResponse {
        optional Attr attr = 1;
        optional Error err = 2;
}

message Attr {
        optional uint64 size = 1;
        optional uint64 atime_sec = 2;
        optional uint32 atime_nano = 3;
        optional uint64 mtime_sec = 4;
        optional uint32 mtime_nano = 5;
        optional uint32 mode = 6;
        optional uint32 nlink = 7;
}

message Error {
        // Only one may be set.
        optional bool not_exist = 1;
        optional string other = 2;
}
